Start experiment with 3D

--- a/ArcgisWeb/tryout/package.json
+++ b/ArcgisWeb/tryout/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
