Added nestjs API project and some docker stuff

--- a/infra-viewer/apps/website/project.json
+++ b/infra-viewer/apps/website/project.json
@@ -60,7 +60,10 @@
           "browserTarget": "website:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/website/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
