--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -17,6 +17,8 @@
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/angular": "^14.7.5",
     "@nrwl/cli": "14.7.5",
     "@nrwl/cypress": "14.7.5",
@@ -24,6 +26,7 @@
     "@nrwl/jest": "14.7.5",
     "@nrwl/linter": "14.7.5",
     "@nrwl/nest": "^14.7.5",
+    "@nrwl/node": "14.7.5",
     "@nrwl/workspace": "14.7.5",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -51,6 +54,10 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
