--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -28,6 +28,7 @@
     "@nrwl/nest": "^14.7.5",
     "@nrwl/node": "14.7.5",
     "@nrwl/workspace": "14.7.5",
+    "@types/express": "^4.17.14",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -57,6 +58,8 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.2",
+    "express": "^4.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
