--- a/infra-viewer/apps/website/.eslintrc.json
+++ b/infra-viewer/apps/website/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "infraViewer",
+            "prefix": "app",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "infra-viewer",
+            "prefix": "app",
             "style": "kebab-case"
           }
         ]
