--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -21,15 +21,15 @@
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/angular": "^14.7.5",
-    "@nrwl/cli": "14.7.5",
-    "@nrwl/cypress": "14.7.5",
-    "@nrwl/eslint-plugin-nx": "14.7.5",
-    "@nrwl/jest": "14.7.5",
-    "@nrwl/linter": "14.7.5",
-    "@nrwl/nest": "^14.7.5",
-    "@nrwl/node": "14.7.5",
-    "@nrwl/workspace": "14.7.5",
+    "@nrwl/angular": "14.7.6",
+    "@nrwl/cli": "14.7.6",
+    "@nrwl/cypress": "14.7.6",
+    "@nrwl/eslint-plugin-nx": "14.7.6",
+    "@nrwl/jest": "14.7.6",
+    "@nrwl/linter": "14.7.6",
+    "@nrwl/nest": "14.7.6",
+    "@nrwl/node": "14.7.6",
+    "@nrwl/workspace": "14.7.6",
     "@types/express": "^4.17.14",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -42,7 +42,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
-    "nx": "14.7.5",
+    "nx": "14.7.6",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
@@ -69,3 +69,4 @@
     "zone.js": "~0.11.4"
   }
 }
+
