--- a/.github/workflows/build-infra-viewer.yml
+++ b/.github/workflows/build-infra-viewer.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./infra-viewer
+#     defaults:
+#       run:
+#         working-directory: ./infra-viewer
     steps:
       - uses: actions/checkout@v2
         with:
