--- a/infra-viewer/apps/api/SystemConfiguration.json
+++ b/infra-viewer/apps/api/SystemConfiguration.json
@@ -3,6 +3,7 @@
     {
       "url": "https://tiles.arcgis.com/tiles/nSZVuSZjHpEZZbRo/arcgis/rest/services/BAG_3D_WGS/SceneServer",
       "id": "buildings",
+      "mode": "on-the-ground",
       "featureReduction": {
         "type": "selection"
       },
@@ -55,6 +56,36 @@
       "popupTemplate": {
         "title": "{TYPE_SPEELTOESTEL}",
         "content": "{BUURTNAAM}, {WIJKNAAM}\n{LEEFTIJDSGROEP} jaar.\nBeheerder: {BEHEERDER}, eigenaar: {EIGENAAR}"
+      }
+    },
+    {
+      "id": "kabelsleidingen",
+      "url": "https://geoservices.rijkswaterstaat.nl/arcgis2/rest/services/GDR/kabels_en_leidingen_zeeland/FeatureServer ",
+      "title": "Kabels en leidingen Zeeland",
+      "offset": -20,
+      "mode": "absolute-height",
+      "renderer": {
+        "type": "simple",
+        "symbol": {
+          "type": "line-3d",
+          "symbolLayers": [
+            {
+              "type": "path",
+              "profile": "circle",
+              "material": {
+                "color": [
+                  100,
+                  100,
+                  100
+                ]
+              },
+              "width": 1,
+              "height": 1,
+              "anchor": "bottom",
+              "profileRotation": "heading"
+            }
+          ]
+        }
       }
     },
     {
