--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -35,7 +35,6 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "autoprefixer": "^10.4.0",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -44,9 +43,7 @@
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
     "nx": "14.7.8",
-    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
@@ -69,6 +66,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uikit": "^3.15.10",
     "zone.js": "~0.11.4"
   }
 }
