NX migration and started working on authorization for datasets & quering

--- a/infra-viewer/apps/website/tsconfig.json
+++ b/infra-viewer/apps/website/tsconfig.json
@@ -17,6 +17,9 @@
     "target": "es2020",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "experimentalDecorators": true,
+    "jsx": "react",
+    "jsxFactory": "tsx",
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
