--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -13,40 +13,42 @@
   "private": true,
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.2.0",
-    "@angular-eslint/eslint-plugin": "~14.0.4",
-    "@angular-eslint/eslint-plugin-template": "~14.0.4",
-    "@angular-eslint/template-parser": "~14.0.4",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/angular": "14.7.8",
-    "@nrwl/cli": "14.7.8",
-    "@nrwl/cypress": "14.7.8",
-    "@nrwl/eslint-plugin-nx": "14.7.8",
-    "@nrwl/jest": "14.7.8",
-    "@nrwl/linter": "14.7.8",
-    "@nrwl/nest": "14.7.8",
-    "@nrwl/node": "14.7.8",
-    "@nrwl/workspace": "14.7.8",
+    "@nrwl/angular": "14.8.3",
+    "@nrwl/cli": "14.8.3",
+    "@nrwl/cypress": "14.8.3",
+    "@nrwl/eslint-plugin-nx": "14.8.3",
+    "@nrwl/jest": "14.8.3",
+    "@nrwl/linter": "14.8.3",
+    "@nrwl/nest": "14.8.3",
+    "@nrwl/node": "14.8.3",
+    "@nrwl/workspace": "14.8.3",
     "@types/express": "^4.17.14",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.2",
-    "nx": "14.7.8",
+    "jest-preset-angular": "12.2.2",
+    "nx": "14.8.3",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "4.8.4"
   },
   "dependencies": {
     "@angular/animations": "~14.2.0",
@@ -70,3 +72,4 @@
     "zone.js": "~0.11.4"
   }
 }
+
