--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,14 +3,31 @@ name: Build & Deploy Docker Infraviewer
 on:
   push:
     branches: [ "main" ]
-
+  workflow_dispatch:
+  
 jobs:
 
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./infra-viewer
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Build base image
+      run: docker build . --tag staijn/infraviewer:nx-base
+    - name: Build sub-application images
+      run: docker-compose build
+    -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.TOKEN }}
+    - name: Publish base image
+      run: docker push . staijn/infraviewer:nx-base
+    - name: Publish api image
+      run: docker push . staijn/infraviewer:api
+    - name: Publish website image
+      run: docker push . staijn/infraviewer:website
