--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.TOKEN }}
     - name: Publish base image
-      run: docker push . ${{ secrets.USERNAME }}/infraviewer:nx-base
+      run: docker push ${{ secrets.USERNAME }}/infraviewer:nx-base
     - name: Publish api image
-      run: docker push . ${{ secrets.USERNAME }}/infraviewer:api
+      run: docker push ${{ secrets.USERNAME }}/infraviewer:api
     - name: Publish website image
-      run: docker push . ${{ secrets.USERNAME }}/infraviewer:website
+      run: docker push ${{ secrets.USERNAME }}/infraviewer:website
