--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -19,6 +19,7 @@
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
+    "@angularclass/hmr": "^3.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/angular": "14.8.3",
@@ -72,4 +73,3 @@
     "zone.js": "~0.11.4"
   }
 }
-
