--- a/infra-viewer/apps/website/project.json
+++ b/infra-viewer/apps/website/project.json
@@ -5,7 +5,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/website",
         "index": "apps/website/src/index.html",
@@ -13,9 +15,17 @@
         "polyfills": "apps/website/src/polyfills.ts",
         "tsConfig": "apps/website/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/website/src/favicon.ico", "apps/website/src/assets"],
-        "styles": ["apps/website/src/styles.scss"],
-        "scripts": []
+        "assets": [
+          "apps/website/src/favicon.ico",
+          "apps/website/src/assets"
+        ],
+        "styles": [
+          "apps/website/src/styles.scss"
+        ],
+        "scripts": [
+          "./node_modules/uikit/dist/js/uikit.min.js",
+          "./node_modules/uikit/dist/js/uikit-icons.min.js"
+        ]
       },
       "configurations": {
         "production": {
@@ -86,12 +96,17 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/website/**/*.ts", "apps/website/**/*.html"]
+        "lintFilePatterns": [
+          "apps/website/**/*.ts",
+          "apps/website/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/website"],
+      "outputs": [
+        "coverage/apps/website"
+      ],
       "options": {
         "jestConfig": "apps/website/jest.config.ts",
         "passWithNoTests": true
