--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -36,6 +36,7 @@
     "@types/node": "16.11.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/uikit": "^3.14.0",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "cypress": "^10.7.0",
