--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -22,15 +22,15 @@
     "@angularclass/hmr": "^3.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/angular": "14.8.4",
-    "@nrwl/cli": "14.8.4",
-    "@nrwl/cypress": "14.8.4",
-    "@nrwl/eslint-plugin-nx": "14.8.4",
-    "@nrwl/jest": "14.8.4",
-    "@nrwl/linter": "14.8.4",
-    "@nrwl/nest": "14.8.4",
-    "@nrwl/node": "14.8.4",
-    "@nrwl/workspace": "14.8.4",
+    "@nrwl/angular": "15.0.0-rc.2",
+    "@nrwl/cli": "15.0.0-rc.2",
+    "@nrwl/cypress": "15.0.0-rc.2",
+    "@nrwl/eslint-plugin-nx": "15.0.0-rc.2",
+    "@nrwl/jest": "15.0.0-rc.2",
+    "@nrwl/linter": "15.0.0-rc.2",
+    "@nrwl/nest": "15.0.0-rc.2",
+    "@nrwl/node": "15.0.0-rc.2",
+    "@nrwl/workspace": "15.0.0-rc.2",
     "@types/express": "^4.17.14",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -46,7 +46,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.2",
-    "nx": "14.8.4",
+    "nx": "15.0.0-rc.2",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
