--- a/infra-viewer/libs/interfaces/project.json
+++ b/infra-viewer/libs/interfaces/project.json
@@ -12,7 +12,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/interfaces"],
+      "outputs": ["{workspaceRoot}/coverage/libs/interfaces"],
       "options": {
         "jestConfig": "libs/interfaces/jest.config.ts",
         "passWithNoTests": true
