--- a/infra-viewer/apps/website/project.json
+++ b/infra-viewer/apps/website/project.json
@@ -16,7 +16,8 @@
         "assets": ["apps/website/src/favicon.ico", "apps/website/src/assets"],
         "styles": ["apps/website/src/styles.scss"],
         "scripts": [
-          "./node_modules/uikit/dist/js/uikit.min.js"
+          "./node_modules/uikit/dist/js/uikit.min.js",
+          "./node_modules/uikit/dist/js/uikit-icons.min.js"
         ]
       },
       "configurations": {
