--- a/infra-viewer/apps/website/project.json
+++ b/infra-viewer/apps/website/project.json
@@ -15,10 +15,7 @@
         "inlineStyleLanguage": "scss",
         "assets": ["apps/website/src/favicon.ico", "apps/website/src/assets"],
         "styles": ["apps/website/src/styles.scss"],
-        "scripts": [
-          "./node_modules/uikit/dist/js/uikit.js",
-          "./node_modules/uikit/dist/js/uikit-icons.js"
-        ]
+        "scripts": [        ]
       },
       "configurations": {
         "production": {
