--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -32,6 +32,7 @@
     "@nrwl/node": "15.0.0",
     "@nrwl/workspace": "15.0.0",
     "@types/express": "^4.17.14",
+    "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "^18.0.21",
@@ -67,6 +68,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "express": "^4.18.1",
+    "nestjs-http-promise": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
