--- a/infra-viewer/.eslintrc.json
+++ b/infra-viewer/.eslintrc.json
@@ -6,6 +6,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
+       "@typescript-eslint/no-explicit-any": "warn",
         "@nrwl/nx/enforce-module-boundaries": [
           "error",
           {
