Added AOS, but not working yet

--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -31,6 +31,7 @@
     "@nrwl/nest": "15.0.0",
     "@nrwl/node": "15.0.0",
     "@nrwl/workspace": "15.0.0",
+    "@types/aos": "^3.0.4",
     "@types/express": "^4.17.14",
     "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.1",
@@ -69,6 +70,7 @@
     "@nestjs/swagger": "^6.1.2",
     "ag-grid-angular": "^28.2.0",
     "ag-grid-community": "^28.2.0",
+    "aos": "^2.3.4",
     "express": "^4.18.1",
     "nestjs-http-promise": "^2.0.0",
     "reflect-metadata": "^0.1.13",
