--- a/infra-viewer/libs/interfaces/project.json
+++ b/infra-viewer/libs/interfaces/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "interfaces",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/interfaces/src",
   "projectType": "library",
