--- a/infra-viewer/apps/website/project.json
+++ b/infra-viewer/apps/website/project.json
@@ -6,7 +6,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/website",
         "index": "apps/website/src/index.html",
@@ -14,8 +16,13 @@
         "polyfills": "apps/website/src/polyfills.ts",
         "tsConfig": "apps/website/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/website/src/favicon.ico", "apps/website/src/assets"],
-        "styles": ["apps/website/src/styles.scss"],
+        "assets": [
+          "apps/website/src/favicon.ico",
+          "apps/website/src/assets"
+        ],
+        "styles": [
+          "apps/website/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -87,12 +94,17 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/website/**/*.ts", "apps/website/**/*.html"]
+        "lintFilePatterns": [
+          "apps/website/**/*.ts",
+          "apps/website/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/apps/website"],
+      "outputs": [
+        "{workspaceRoot}/coverage/apps/website"
+      ],
       "options": {
         "jestConfig": "apps/website/jest.config.ts",
         "passWithNoTests": true
