Improved performance by not querying the server on buffer slider change, but only at the end when the user stopped dragging

--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -53,6 +53,7 @@
     "typescript": "4.8.4"
   },
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "~14.2.0",
     "@angular/common": "~14.2.0",
     "@angular/compiler": "~14.2.0",
