--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,12 +15,19 @@ jobs:
         working-directory: ./infra-viewer
     steps:
     - uses: actions/checkout@v3
-    -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.TOKEN }}
+    # Add support for more platforms with QEMU (optional)
+    # https://github.com/docker/setup-qemu-action
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2    
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.TOKEN }}
     - name: Build base image
       run: docker build . --tag ${{ secrets.USERNAME }}/infraviewer:nx-base
     - name: Build sub-application images
