--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,12 @@ jobs:
         working-directory: ./infra-viewer
     steps:
     - uses: actions/checkout@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.TOKEN }}
+        
     # Add support for more platforms with QEMU (optional)
     # https://github.com/docker/setup-qemu-action
     - name: Set up QEMU
@@ -22,18 +28,19 @@ jobs:
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+
+    - name: Create customer buildx builder
+      run: docker buildx create --name mybuilder
+    - name: Use the created builder
+      run: docker buildx use mybuilder
+    - name: Bootstrap builder
+      run: docker buildx inspect --bootstrap
       
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.TOKEN }}
-    - name: Build base image
-      run: docker buildx build --platform=linux/amd64,linux/arm64 . --tag ${{ secrets.USERNAME }}/infraviewer:nx-base
+      
+    - name: Build and push base image
+      run: docker buildx build --platform=linux/amd64,linux/arm64,linux/arm/v7 --t ${{ secrets.USERNAME }}/infraviewer:nx-base --push .
     - name: Build sub-application images
       run: docker-compose build
-    - name: Publish base image
-      run: docker push ${{ secrets.USERNAME }}/infraviewer:nx-base
     - name: Publish api image
       run: docker push ${{ secrets.USERNAME }}/infraviewer:api
     - name: Publish website image
