--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
       
       
     - name: Build and push base image
-      run: docker buildx build --platform=linux/amd64,linux/arm64,linux/arm/v7 --t ${{ secrets.USERNAME }}/infraviewer:nx-base --push .
+      run: docker buildx build --platform=linux/amd64,linux/arm64,linux/arm/v7 -t ${{ secrets.USERNAME }}/infraviewer:nx-base --push .
     - name: Build sub-application images
       run: docker-compose build
     - name: Publish api image
