--- a/infra-viewer/docker-compose.yml
+++ b/infra-viewer/docker-compose.yml
@@ -17,7 +17,6 @@ services:
       dockerfile: ./apps/api/Dockerfile
       args:
         NODE_ENV: 'development'
-        BUILD_FLAG: ''
     image: staijn/infraviewer:api
     ports:
       - 4939:3333
@@ -26,24 +25,21 @@ services:
       PORT: 3333
     networks:
       - corp
-    restart: on-failure
+#    restart: on-failure
 
-  website:
-    container_name: website
-    build:
-      context: ./
-      cache_from:
-        - nginx:1.19.2
-      dockerfile: ./apps/website/Dockerfile
-      args:
-        NODE_ENV: 'development'
-        BUILD_FLAG: ''
-    image: staijn/infraviewer:website
-    ports:
-      - 4900:80
-    environment:
-      NODE_ENV: 'development'
-      PORT: 4900
-    networks:
-      - corp
-    restart: on-failure
+#  website:
+#    container_name: website
+#    build:
+#      context: ./
+#      cache_from:
+#        - nginx:1.19.2
+#      dockerfile: ./apps/website/Dockerfile
+#    image: staijn/infraviewer:website
+#    ports:
+#      - 4900:80
+#    environment:
+#      NODE_ENV: 'development'
+#      PORT: 4900
+#    networks:
+#      - corp
+#    restart: on-failure
