--- a/infra-viewer/docker-compose.yml
+++ b/infra-viewer/docker-compose.yml
@@ -25,21 +25,21 @@ services:
       PORT: 3333
     networks:
       - corp
-#    restart: on-failure
+    restart: on-failure
 
-#  website:
-#    container_name: website
-#    build:
-#      context: ./
-#      cache_from:
-#        - nginx:1.19.2
-#      dockerfile: ./apps/website/Dockerfile
-#    image: staijn/infraviewer:website
-#    ports:
-#      - 4900:80
-#    environment:
-#      NODE_ENV: 'development'
-#      PORT: 4900
-#    networks:
-#      - corp
-#    restart: on-failure
+  website:
+    container_name: website
+    build:
+      context: ./
+      cache_from:
+        - nginx:1.19.2
+      dockerfile: ./apps/website/Dockerfile
+    image: staijn/infraviewer:website
+    ports:
+      - 4900:80
+    environment:
+      NODE_ENV: 'development'
+      PORT: 4900
+    networks:
+      - corp
+    restart: on-failure
