--- a/infra-viewer/apps/api/Dockerfile
+++ b/infra-viewer/apps/api/Dockerfile
@@ -2,11 +2,4 @@ FROM staijn/infraviewer:nx-base AS builder
 
 RUN npx nx build api
 
-FROM node:lts-alpine3.15
-WORKDIR /app
-
-COPY --from=builder /app/dist/apps/api /app
-COPY --from=builder /app/package*.json /app
-RUN npm install --omit=dev --ignore-scripts
-
-CMD ["node", "main.js"]
+CMD ["node", "dist/apps/api/main.js"]
