--- a/infra-viewer/apps/api/Dockerfile
+++ b/infra-viewer/apps/api/Dockerfile
@@ -1,5 +1,5 @@
 FROM staijn/infraviewer:nx-base AS builder
 
-RUN set NX_DAEMON=false && npx nx build api --verbose
+RUN set NX_DAEMON=false npx nx build api --verbose
 
 CMD ["node", "dist/apps/api/main.js"]
