--- a/infra-viewer/apps/api/Dockerfile
+++ b/infra-viewer/apps/api/Dockerfile
@@ -2,4 +2,4 @@ FROM staijn/infraviewer:nx-base AS builder
 
 RUN set NX_DAEMON=false npx nx build api --verbose
 
-CMD ["node", "dist/apps/api/main.js"]
+CMD ["node", "./dist/apps/api/main.js"]
