--- a/infra-viewer/nx.json
+++ b/infra-viewer/nx.json
@@ -8,6 +8,7 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
+        "useDaemonProcess": false,
         "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
