Some progress, it compiles but when code is uncommented it doesn't because of types mismatch.
It needs a conditional if a layer is map-image or not, because some properties cannot be configured on those layers

--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -63,6 +63,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
+    "@ng-select/ng-select": "^10.0.0",
     "ag-grid-angular": "^28.2.0",
     "ag-grid-community": "^28.2.0",
     "aos": "^2.3.4",
