Fixed some annoying errors in the console

--- a/infra-viewer/apps/api/src/assets/SystemConfiguration.json
+++ b/infra-viewer/apps/api/src/assets/SystemConfiguration.json
@@ -196,6 +196,11 @@
         {
           "id": 13,
           "visible": true,
+          "elevationInfo": {
+            "mode": "on-the-ground",
+            "unit": "meters",
+            "offset": 0
+          },
           "renderer": {
             "type": "simple",
             "visualVariables": [
