Added some defaults

--- a/infra-viewer/apps/api/src/assets/SystemConfiguration.json
+++ b/infra-viewer/apps/api/src/assets/SystemConfiguration.json
@@ -265,13 +265,15 @@
       "y": 443752.26031690626,
       "z": 5966.512190682592
     },
-    "qualityProfile": "low",
+    "qualityProfile": "medium",
     "environment": {
       "lighting": {
         "type": "sun",
         "directShadowsEnabled": true,
         "ambientOcclusionEnabled": true
-      }
+      },
+      "atmosphereEnabled": true,
+      "starsEnabled": true
     },
     "spatialReference": {
       "wkid": 28992
