Added logo to navbar and does not show nav items that require login when you are not

--- a/infra-viewer/apps/api/src/assets/SystemConfiguration.json
+++ b/infra-viewer/apps/api/src/assets/SystemConfiguration.json
@@ -195,7 +195,7 @@
         },
         {
           "id": 13,
-          "visible": true,
+          "visible": false,
           "elevationInfo": {
             "mode": "on-the-ground",
             "unit": "meters",
