--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "15.0.1",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "15.0.1",
     "@angular/compiler": "15.0.1",
     "@angular/core": "15.0.1",
