--- a/infra-viewer/libs/interfaces/project.json
+++ b/infra-viewer/libs/interfaces/project.json
@@ -6,14 +6,20 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/interfaces/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/interfaces/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/libs/interfaces"],
+      "outputs": [
+        "{workspaceRoot}/coverage/libs/interfaces"
+      ],
       "options": {
         "jestConfig": "libs/interfaces/jest.config.ts",
         "passWithNoTests": true
