--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -58,7 +58,9 @@
     "@angular/forms": "15.0.1",
     "@angular/platform-browser": "15.0.1",
     "@angular/platform-browser-dynamic": "15.0.1",
+    "@angular/pwa": "^15.0.2",
     "@angular/router": "15.0.1",
+    "@angular/service-worker": "15.0.1",
     "@arcgis/core": "^4.24.7",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
