--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -62,6 +62,10 @@
     "@angular/router": "15.0.1",
     "@angular/service-worker": "15.0.1",
     "@arcgis/core": "^4.24.7",
+    "@fortawesome/angular-fontawesome": "^0.12.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
