--- a/.github/workflows/docker-image-x64.yml
+++ b/.github/workflows/docker-image-x64.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Docker Infraviewer ARM
+name: Build & Deploy Docker Infraviewer X64
 
 on:
   workflow_dispatch:
@@ -18,24 +18,10 @@ jobs:
         with:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.TOKEN }}
-      
-      # Add support for more platforms with QEMU (optional)
-      # https://github.com/docker/setup-qemu-action
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Create custom buildx builder
-        run: docker buildx create --name mybuilder
-      - name: Use the created builder
-        run: docker buildx use mybuilder
-      - name: Bootstrap builder
-        run: docker buildx inspect --bootstrap
-
 
       - name: Build and push base image
-        run: docker buildx build --platform=linux/arm/v7 -t ${{ secrets.USERNAME }}/infraviewer:nx-base --push .
+        run: docker build . -t staijn/infraviewer:nx-base
       - name: Build sub-application images
-        run: docker buildx bake --push --set *.platform=linux/arm/v7
+        run: docker-compose build
+      - name: Push sub-application images
+        run: docker-compose push
