--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -64,8 +64,8 @@
     "@arcgis/core": "^4.24.7",
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -74,6 +74,7 @@
     "ag-grid-community": "^28.2.0",
     "aos": "^2.3.4",
     "express": "^4.18.1",
+    "jest-preset-angular": "^12.2.3",
     "nestjs-http-promise": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
