--- a/infra-viewer/package.json
+++ b/infra-viewer/package.json
@@ -31,10 +31,12 @@
     "@nrwl/node": "15.2.4",
     "@nrwl/workspace": "15.2.4",
     "@types/aos": "^3.0.4",
+    "@types/dat.gui": "^0.7.7",
     "@types/express": "^4.17.14",
     "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/three": "^0.146.0",
     "@types/uikit": "^3.14.0",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
@@ -73,11 +75,13 @@
     "ag-grid-angular": "^28.2.0",
     "ag-grid-community": "^28.2.0",
     "aos": "^2.3.4",
+    "dat.gui": "^0.7.9",
     "express": "^4.18.1",
     "jest-preset-angular": "^12.2.3",
     "nestjs-http-promise": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "three": "^0.147.0",
     "tslib": "^2.3.0",
     "uikit": "^3.15.10",
     "zone.js": "~0.11.4"
