--- a/infra-viewer/bs-config.json
+++ b/infra-viewer/bs-config.json
@@ -1,6 +1,8 @@
 {
   "server": {
     "baseDir": "./dist/apps/website",
-    "routes": { "/node_modules": "node_modules" }
+    "routes": {
+      "/node_modules": "node_modules"
+    }
   }
 }
