Add ability to disable authorization, bypassing the councils login page but not loading their maps

--- a/infra-viewer/apps/website/src/assets/SystemConfiguration.json
+++ b/infra-viewer/apps/website/src/assets/SystemConfiguration.json
@@ -285,5 +285,10 @@
     "spatialReference": {
       "wkid": 28992
     }
+  },
+  "authorization": {
+    "requireAuthorization": false,
+    "portalUrl": "https://geo.arnhem.nl/portal/",
+    "portalSharingUrl": "https://geo.arnhem.nl/portal/sharing/"
   }
 }
